update added the NPC module
and clean up some parts of the Cloud
also bugfixes